welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: not found: value m
		m = Math.max(a,b);
                ^max1020:5: error: not found: value m
		return m;
                       ^max1020:10: error: type mismatch;
 found   : Unit
 required: Int
	} else  if ((a < 10 && a > 20) && (b < 10 && b > 20)) {
                ^